# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airdot"
version = "0.2.0b0"
description = "A code base for deploying ml api "
readme = "README.md"
authors = [{ name = "airdot-io", email = "abhinav199530singh@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "black==22.6.0",
    "pytest==7.1.2",
    "PyYAML==5.4.1",
    "google-api-python-client==2.78.0",
    "google-cloud-core==2.3.2",
    "google-cloud-storage==2.7.0",
    "google-auth",
    "zstd==1.5.2.6",
    "boto==2.49.0",
    "botocore==1.29.127",
    "boto3==1.26",
    "docker==6.1.2",
    "redis==4.5.5",
    "seldon-core==1.16"
]

requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "black==22.6.0",
    "pytest==7.1.2",
    "PyYAML==5.4.1",
    "google-api-python-client==2.78.0",
    "google-cloud-core==2.3.2",
    "google-cloud-storage==2.7.0",
    "google-auth",
    "zstd==1.5.2.6",
    "boto==2.49.0",
    "botocore==1.29.127",
    "boto3==1.26",
    "docker==6.1.2",
    "redis==4.5.5",
    "seldon-core==1.16"
]

[project.urls]
Homepage = "https://github.com/airdot-io/airdot-Deploy"